Further add y vector

--- a/sample_File_to_save_to_github.ipynb
+++ b/sample_File_to_save_to_github.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPLxq737W4v3wj0YYJaxAVT",
+      "authorship_tag": "ABX9TyMEACH3ScONOSNF/084pX+w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,9 +74,44 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "y = 5 + x**2"
+      ],
       "metadata": {
         "id": "ofnih4fGqHqv"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4314-jJtrYyC",
+        "outputId": "6715e184-1bcc-439e-ef3f-a3c99edc3e2a"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 294  105  230  489 1094]\n",
+            " [2214 1526  105  966 1854]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "3iBCZMWyrc9Q"
       },
       "execution_count": null,
       "outputs": []
